@@ -1052,8 +1052,10 @@ class AssocArray
 		String	&getString(const String &key, String &default_value) const;
 		int		getInt(const String &key) const;
 		int		getInt(const String &key, int default_value) const;
-		AssocArray	&getArray(const String &key) const;
-		AssocArray	&getArray(const String &key, AssocArray &default_value) const;
+		AssocArray	&getAssocArray(const String &key) const;
+		AssocArray	&getAssocArray(const String &key, AssocArray &default_value) const;
+		Array	&getArray(const String &key) const;
+		Array	&getArray(const String &key, Array &default_value) const;
 		bool	exists(const String &key) const;
 		bool	isTrue(const String &key) const;
 
